tooling/nargo_cli/tests/snapshots/execute__tests__nested_dyn_array_regression_5782_force_brillig_true_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "11804253508753521471",
  "abi": {
    "parameters": [
      {
        "name": "array",
        "type": {
          "kind": "array",
          "length": 2,
          "type": {
            "kind": "field"
          }
        },
        "visibility": "private"
      },
      {
        "name": "i",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "2920182694213909827": {
        "error_kind": "string",
        "string": "attempt to subtract with overflow"
      },
      "12049594436772143978": {
        "error_kind": "string",
        "string": "array ref-count underflow detected"
      },
      "16761564377371454734": {
        "error_kind": "string",
        "string": "Array index out of bounds"
      },
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/81ZMW/TQBQ+J3ZiJ40SwYTEBmwMSZw26UQlUBcW/gCDmzQjIxODxcrIxMTGhMQCElIlBsTChgQ/iLh9r/3y5dktqi/lJOvZd+/e+9537872XeDOSmN1BXIfQp2Ter13UFeUA5HD65VRjbaGvjAGHjD6wNnwhNM1CTQnhRXUH5GJSEyqZo1BJ+S3Tvuz4WSaGPHViD9NwKZP+6Ef+8O22HmSr9t35FfrDvMLLg+pj2L1NJYTz1yMexS/g1jUd+THdxqQP0fj4Mh/x3nNu1FA/hQP86PrQk918gs8AbWF+WYc2hZBm45vvLrugJ6VW9iG65rmZmHjPth7IPeec3WaEKa65+1tAz/6Kko7v+BDuWpCnXKuYxCjPrUl0Bbm63468hyCH7SlOCLSvyfPfZEt6KP9B4b/Fvlfw23UMS+JoZ8Y+q3VdVfuu3IVOfQJcPMc5PXC17rN81O5t3xqTLx+4dyOqO6hyCLeLxQfzv+qNWHgyues5/fmxvoVANaGgUf1W/LcMmLDvhHpp8DXV4qx7SfGsWKOAVPTiLtNmFV/CphPiAft48AmvpsapB8b+hi34ukTb9iX37GuPq52y7hoGRgj0n1E+GLoU+ecvgV2y7i5iVzCsS7Lpccit5FLqn+VXELfB64WrjJncMU4ynh6Svjw/8d3LiXkW/HWyM3Y8xw5z9ME+LXylMdG9Z+JxDyt+nbVfmHuJZ60wPENcHDORoSpam44tzmXEkMfx4bf1ZiPmh99o18b+PGZxxpHR+zhdw76jCF+1Mf7okRU91yk9Z0TV3CnvpC7toGnZ/TD3GKsN/FPqf47zuvcHfFYXsarctc1sA6MNuQf29BP1/BTZavvNseIc7/rh6/z3N8Re6ERB2JrkD7eFyWiuhcirdy3xqhTwV3bwMP40RZ/xxTF4hr74nNk6EYlcb4UqePVI98H8jy8ZrHeub2K2DiPdjzhCggL5hH65DzqGXEgv1r3SqSvPPK8To6Zn7Jvik5J/K8h/pMrxG+tdYzB4gvx9A2+ONeq3teeuKzMNfTJ7+ur5tobkb7e11XjULVmxSX4UTcydHnNUt23Iv+HNQu/GTiPPO2HD3lMMY/YZ1EaBrc49sz9O5F17G9ZebGt/6DL1iz+D1L99xA/r1n/+o9hzRXrH8PKJ54rvL+Gui1qU90PIj3vkZhzhb8TmRvE5Wmv83yuKD84V6y9ywbp4z3yq3UfRVpzhfdSsc656r1gbes6v//Z09kZR0XRf3ydL1xCaEf9z/KM7zCV4TVwLqfZaJlmy2w3Wywm84xzzBFPdfvPpulsPp7Mp0e7aZbubd3/eDbb2x8frU7MFvPlYpJu2//xbH8x3F8eZ6PRaLwYHl/m3zqrwn2jouh5F56HoT6ucaj/XXVX1w+55/NR9Ffo/a7QC0rkqQ2jLszX66xzMjw/VH313ck3MWpbF9oi8rMjz8gX2lIcEen/kmcdEzzz0/4Dw39M/tdwG3V8ftg19LuGfjE+P9WeSIy97r2VU59kH+sYm+ZOkdd/Adn50NhRJgAA",
  "debug_symbols": "ldnbiuJAFEbhd8l1LmrXefsqw9B4iE1AokQdGMR3n0QM06SCYd00ne71QfAXFetRHZrd/fur7Y7na7X59ahO5/321p674erxrKtd355O7ffXzz9XZvzh46u/XrbdeHm9bftbtYlSV013GH6Jgz62p6baBPP8XVc+wT7DXlkfDOxlqQ9h6tO8t7B3sPewD7CPsE+wzx/7ZOa9sj4a2AvsLewX983p3WuY9x72AfYR9gn2GfbK+mQ+9zrvBfYW9g72HvaL+4qZgEjxCEUsEhYZC6UiGywEC4uFw8JjgTfPePOMN89484w3V7y54s0Vb654c8WbK95c8eaKN1e8ueLNxRhOhBPLieNkefhkJpK0IIGTyEniJHOimIjhRDixKyTbgjhO1tbPxRNGAieRk8TJ4vrW2DexIgVRTKzhRDixnDhOPCeBk8X1rfMT8a4giZPMiWLiDCfCieXEceI5CZzw9R1f3/H1HV/f8/X96vqxIJaT1fWL9xfvOQmcRE6W149xIql45V/+Cu4zUUyWv4j7TIQTy4njxHMS1kguSOQkcZI5UUyi4UQ4WVs/F2+v0XHiOQmcRE4SJ5kTxSQZToQTvn6C6z+Hqz/bvt3uTs376OR47/Y/TlJufy/N7FDl0p/3zeHeN+Pxyv+TlfExETX18JlvuJXxRmyoXRhv6/WvFGrJ5vU5e7zMfriMwx0Md/EP",
  "file_map": {
    "50": {
      "source": "fn main(mut array: [Field; 2], i: u32) {\n    assert_eq(array[i - 1], 5);\n    assert_eq(array[i], 10);\n\n    array[i] = 2;\n\n    let array2 = [array, array];\n\n    assert_eq(array2[0][0], 5);\n    assert_eq(array2[0][i], 2);\n    assert_eq(array2[i][0], 5);\n    assert_eq(array2[i][i], 2);\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/nested_dyn_array_regression_5782/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
