tooling/nargo_cli/tests/snapshots/execute__tests__no_predicates_basic_force_brillig_true_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "8345313339710275170",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "field"
        },
        "visibility": "public"
      }
    ],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/7VUSw6CMBCdSolWoguNbvQQRVBYstCDNBLOwdFNw1SGWlzo9CWkJTN98+b1I2CAwM9C4riAT7icBkf9H3JGLh1Tp4ik8y2UzgXMG3/GUcF0k2w8YWxYBTRx8de6vKlAf4z6C0U4I/BfHL+Mw6+XyHPvp/zg1d3A9PLSNS5GL/IDYyuMu/kW58rji7HvVBO3b/uAflcrw16PxA/qa/plbcgXYNQtvHoyoI/WT738g6cz1rncef3TWhmM75Ls+etX9eCTRdKPPjh/KCSJ0/wT/q9n+mh+1NlVJu8K05mradvyaXyfLOg5fAEWXxueeQcAAA==",
  "debug_symbols": "tZLLCsMgEEX/ZdYuosEmza+UEkwyCYJo8FEo4r9XSxbSrt2Id7hzmMWJsOESjlnq3TiYHhGUWYWXRucUE4HFSqXkMddj6MpD+bfvTqFLdF5YD1M/EkC9wcR53t6lwvztEvkrUsavJu1pXX0SoLd26KEdemyHvjdDs64ROuX0ElaKReEl0x70Wrnl3yf+aHZas+IWLBbhKtfKkYwRNmRsRn8A",
  "file_map": {
    "50": {
      "source": "fn main(x: Field, y: pub Field) {\n    basic_check(x, y);\n}\n\n#[no_predicates]\nfn basic_check(x: Field, y: Field) {\n    assert(x != y);\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/no_predicates_basic/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
