tooling/nargo_cli/tests/snapshots/execute__tests__no_predicates_brillig_force_brillig_true_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "10330208144321230795",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "public"
      }
    ],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/81VSQ7CMAx0aFgCQiDgAhfgAtcAZTlygIdEoL6jT6cVDnVNigQkCEuRXdmZjCdLBdxN4MhNoq/Bs9maI3r9na08YumQPEUgng+iNBZQLfwSvYLyJuX5yGPDysHJF/5Bxzvl6M8j/40imAHw1xZfhsHXTcQ5pWV8YOtGrM41x9acSc2Z1XSh/AhQHJujD4Kd38pGD4q4j7FieCHOD+XkW/+hg79dq4O9zkmO7k8dY85PkDytn6BvZGP0A/2y6x1zzvJNzmPGM9Q9GBBcYGvles0Yj0DnwbzSy3VGuF7TP9OrA8U/RKb+uewPWlsOUVpoYvWgJkme1i/wu13R0/FDnsnerJKNSczWXK/xxXDNcqN3/QbStuKCJQkAAA==",
  "debug_symbols": "zdXNCoQgEAfwd5mzBz/arF5lWcLKQhALs4UlevfVpUDaw95aL8LI3+HnZWaFTjbLUCvTjzNU9xX02AqnRuOrdUPQWKW1Gur4GnA4CP/k50mYUM5OWAdVViCQpoOK3/zrXmkJ1Q1v6CtIKN+TJPsRpfhoSgmLow8EFF+myMtDwfOzgiShoEkoWBKKLAlFfpmCkUPBirOCJ6EoklCUKSgY/r9i89VTWCUaLfdh3y+mjWa/e03ytAYmO7ayW6wMCyHaBeE/jCFW+La+9Rs=",
  "file_map": {
    "50": {
      "source": "unconstrained fn main(x: u32, y: pub u32) {\n    intermediate_function(x, y);\n}\n\nfn intermediate_function(x: u32, y: u32) {\n    basic_checks(x, y);\n}\n\n#[no_predicates]\nfn basic_checks(x: u32, y: u32) {\n    if x > y {\n        assert(x == 10);\n    } else {\n        assert(y == 20);\n    }\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/no_predicates_brillig/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
